@@ -2,6 +2,7 @@
 
  * #18: Fix for README mention of sample files not included in package.
  * #22: Sample files for triggering borgmatic from a systemd timer.
+ * Dropped Python 2 support. Now Python 3 only.
  * Added logo.
 
 1.0.3
